<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoaplicacion2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/superior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/titulo_arriba"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tituloVentana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/negroAOC"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/inferior"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="26dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/botones_abajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/superior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">




        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LabelUsuario"
                android:textColor="@color/negroAOC" />


        </LinearLayout>

        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/campotexto"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/Gris80AOC"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/LabelPassword"
                android:textColor="@color/negroAOC"/>


        </LinearLayout>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/campotexto"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:minHeight="48dp"
            android:textColor="@color/Gris80AOC"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/negroAOC"
                android:text="@string/LabelIdioma"/>
        </LinearLayout>


        <Spinner
            android:id="@+id/spinnerLanguage"
            style="@style/SpinnerTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:entries="@array/language"
            android:spinnerMode="dropdown"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:text="@string/LabelRegistro"
                android:textColor="@color/Gris80AOC" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/LabelRegistro2"
                android:textColor="@color/azulOscAOC"
                android:textSize="24sp"
                android:clickable="true"
                />
        </LinearLayout>

    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/botones_abajo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardAceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:clickable="true"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/botoncompuestoazul"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/BotonAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/BotonAceptarDesc"
                        android:minHeight="22sp"
                        android:text="@string/BotonAceptar"
                        android:textColor="@color/blancoAOC"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/imageAceptar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/BotonCrearDesc"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:srcCompat="@drawable/ic_aceptar" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="0dp"
                android:clickable="true"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|end"
                    android:background="@drawable/botoncompuestoazul"
                    android:baselineAligned="false"
                    android:clickable="false"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/BotonCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="0dp"
                        android:contentDescription="@string/BotonCancelarDesc"
                        android:minHeight="22sp"
                        android:text="@string/BotonCancelar"
                        android:textColor="@color/blancoAOC"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/imagenCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="#00FFFFFF"
                        android:contentDescription="@string/BotonCancelarDesc"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:srcCompat="@drawable/ic_cancelar" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

