...
    <!--label-->
    <string name="LabelUsuario">Usuario</string>
    <string name="LabelPassword">Clave</string>
    <string name="LabelIdioma">Cambiar Idioma</string>
    <string name="LabelRegistro">Eres Nuevo?:</string>
    <string name="LabelRegistro2">Registrate</string>
    <string name="LabelCorreo">Correo</string>
    <string name="LabelTipoDoc">Tipo Documento</string>
    <string name="LabelDocumento">Documento</string>
    <string name="LabelNombre">Nombre(s)</string>
    <string name="LabelApellido">Apellido(s)</string>
    <string name="LabelEdad">Edad</string>
    <string name="LabelDireccion">Direccion</string>
...
