...
        app:layout_constraintBottom_toTopOf="@id/botones_abajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/superior">

        <ScrollView
            android:id="@+id/Scroll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelProyecto"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />


                </LinearLayout>

...

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelPerfil"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/spinnerProfile"
...
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/labelTecnologia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelTecnologia"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />

                </LinearLayout>


...

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelHabilidad"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />


                </LinearLayout>

...

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelFiltroRol"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/roleFilter"
...

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelBuscarRol"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />
                </LinearLayout>


                <EditText
...

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelExperienciaRol"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />
                </LinearLayout>


                <EditText
...

                    <TextView
                        android:id="@+id/textViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelFiltroTitulo"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/titleFilter"
...

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelBuscarTitulo"
                        android:minHeight="48dp"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />
                </LinearLayout>

                <EditText
...

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/LabelExperienciaTitulo"
                        android:textColor="@color/negroAOC"
                        android:textSize="16dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/titleYears"
...
